// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logging createLogger b 1`] = `
Array [
  Console {
    "__winstonerror": [Function],
    "__winstonwarn": [Function],
    "_events": Object {
      "close": [Function],
      "drain": [Function],
      "error": Array [
        [Function],
        [Function],
      ],
      "finish": [Function],
      "unpipe": Array [
        [Function],
        [Function],
      ],
      "warn": [Function],
    },
    "_eventsCount": 6,
    "_maxListeners": 30,
    "_writableState": WritableState {
      "bufferProcessing": false,
      "bufferedRequest": null,
      "bufferedRequestCount": 0,
      "corked": 0,
      "corkedRequestsFree": CorkedRequest {
        "entry": null,
        "finish": [Function],
        "next": null,
      },
      "decodeStrings": true,
      "defaultEncoding": "utf8",
      "destroyed": false,
      "ended": false,
      "ending": false,
      "errorEmitted": false,
      "finalCalled": false,
      "finished": false,
      "highWaterMark": 16,
      "lastBufferedRequest": null,
      "length": 0,
      "needDrain": false,
      "objectMode": true,
      "onwrite": [Function],
      "pendingcb": 0,
      "prefinished": false,
      "sync": true,
      "writecb": null,
      "writelen": 0,
      "writing": false,
    },
    "consoleWarnLevels": Object {},
    "eol": "
",
    "format": Format {
      "Format": [Function],
      "options": Object {},
    },
    "handleExceptions": undefined,
    "level": "info",
    "levels": Object {
      "debug": 5,
      "error": 0,
      "http": 3,
      "info": 2,
      "silly": 6,
      "verbose": 4,
      "warn": 1,
    },
    "name": "console",
    "parent": DerivedLogger {
      "_events": Object {
        "data": Array [
          [Function],
          [Function],
          [Function],
          [Function],
        ],
        "end": Array [
          [Function],
          [Function],
          [Function],
          [Function],
        ],
        "prefinish": [Function],
      },
      "_eventsCount": 3,
      "_maxListeners": undefined,
      "_readableState": ReadableState {
        "awaitDrain": 0,
        "buffer": BufferList {
          "head": null,
          "length": 0,
          "tail": null,
        },
        "decoder": null,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": true,
        "emittedReadable": false,
        "encoding": null,
        "endEmitted": false,
        "ended": false,
        "flowing": true,
        "highWaterMark": 16,
        "length": 0,
        "needReadable": true,
        "objectMode": true,
        "paused": false,
        "pipes": [Circular],
        "pipesCount": 4,
        "readableListening": false,
        "reading": false,
        "readingMore": false,
        "resumeScheduled": true,
        "sync": false,
      },
      "_transformState": Object {
        "afterTransform": [Function],
        "needTransform": false,
        "transforming": false,
        "writecb": null,
        "writechunk": null,
        "writeencoding": null,
      },
      "_writableState": WritableState {
        "bufferProcessing": false,
        "bufferedRequest": null,
        "bufferedRequestCount": 0,
        "corked": 0,
        "corkedRequestsFree": CorkedRequest {
          "entry": null,
          "finish": [Function],
          "next": null,
        },
        "decodeStrings": true,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": true,
        "ended": false,
        "ending": false,
        "errorEmitted": false,
        "finalCalled": false,
        "finished": false,
        "highWaterMark": 16,
        "lastBufferedRequest": null,
        "length": 0,
        "needDrain": false,
        "objectMode": true,
        "onwrite": [Function],
        "pendingcb": 0,
        "prefinished": false,
        "sync": true,
        "writecb": null,
        "writelen": 0,
        "writing": false,
      },
      "allowHalfOpen": true,
      "defaultMeta": Object {},
      "exceptions": ExceptionHandler {
        "handlers": Map {},
        "logger": [Circular],
      },
      "exitOnError": false,
      "format": Format {
        "options": Object {},
      },
      "level": "info",
      "levels": Object {
        "debug": 5,
        "error": 0,
        "http": 3,
        "info": 2,
        "silly": 6,
        "verbose": 4,
        "warn": 1,
      },
      "profilers": Object {},
      "readable": true,
      "rejections": RejectionHandler {
        "handlers": Map {},
        "logger": [Circular],
      },
      "silent": undefined,
      "writable": true,
    },
    "silent": undefined,
    "stderrLevels": Object {},
    "writable": true,
  },
  DailyRotateFile {
    "__winstonerror": [Function],
    "__winstonwarn": [Function],
    "_events": Object {
      "close": [Function],
      "drain": [Function],
      "error": Array [
        [Function],
        [Function],
      ],
      "finish": [Function],
      "unpipe": Array [
        [Function],
        [Function],
      ],
      "warn": [Function],
    },
    "_eventsCount": 6,
    "_maxListeners": undefined,
    "_writableState": WritableState {
      "bufferProcessing": false,
      "bufferedRequest": null,
      "bufferedRequestCount": 0,
      "corked": 0,
      "corkedRequestsFree": CorkedRequest {
        "entry": null,
        "finish": [Function],
        "next": null,
      },
      "decodeStrings": true,
      "defaultEncoding": "utf8",
      "destroyed": false,
      "ended": false,
      "ending": false,
      "errorEmitted": false,
      "finalCalled": false,
      "finished": false,
      "highWaterMark": 16,
      "lastBufferedRequest": null,
      "length": 0,
      "needDrain": false,
      "objectMode": true,
      "onwrite": [Function],
      "pendingcb": 0,
      "prefinished": false,
      "sync": true,
      "writecb": null,
      "writelen": 0,
      "writing": false,
    },
    "dirname": "logs",
    "filename": "%DATE%.info.log",
    "format": Format {
      "Format": [Function],
      "options": Object {},
    },
    "handleExceptions": undefined,
    "level": "info",
    "levels": Object {
      "debug": 5,
      "error": 0,
      "http": 3,
      "info": 2,
      "silly": 6,
      "verbose": 4,
      "warn": 1,
    },
    "logStream": EventEmitter {
      "_events": Object {
        "new": Array [
          [Function],
          [Function],
        ],
        "rotate": [Function],
      },
      "_eventsCount": 2,
      "_maxListeners": undefined,
      "auditLog": Object {
        "auditLog": "logs/.923c928cdb909ea68f7c250e96bd85f54351900c-audit.json",
        "files": Array [
          Object {
            "date": 1565749507403,
            "hash": "de31bfcafc775014ff6d1023e3477a3c",
            "name": "logs/2019-08-13.info.log",
          },
          Object {
            "date": 1565809830221,
            "hash": "96941aed76ac2a76276dc923ff4d04ed",
            "name": "logs/2019-08-14.info.log",
          },
        ],
        "keep": Object {
          "amount": 7,
          "days": true,
        },
      },
      "end": [Function],
      "write": [Function],
    },
    "options": Object {
      "colorize": false,
      "datePattern": "YYYY-MM-DD",
      "depth": null,
      "eol": "
",
      "filename": "logs/%DATE%.info.log",
      "format": Format {
        "Format": [Function],
        "options": Object {},
      },
      "json": false,
      "label": null,
      "level": "info",
      "logstash": null,
      "maxFiles": "7d",
      "maxSize": "20m",
      "prettyPrint": false,
      "showLevel": true,
      "stringify": false,
      "timestamp": [Function],
    },
    "parent": DerivedLogger {
      "_events": Object {
        "data": Array [
          [Function],
          [Function],
          [Function],
          [Function],
        ],
        "end": Array [
          [Function],
          [Function],
          [Function],
          [Function],
        ],
        "prefinish": [Function],
      },
      "_eventsCount": 3,
      "_maxListeners": undefined,
      "_readableState": ReadableState {
        "awaitDrain": 0,
        "buffer": BufferList {
          "head": null,
          "length": 0,
          "tail": null,
        },
        "decoder": null,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": true,
        "emittedReadable": false,
        "encoding": null,
        "endEmitted": false,
        "ended": false,
        "flowing": true,
        "highWaterMark": 16,
        "length": 0,
        "needReadable": true,
        "objectMode": true,
        "paused": false,
        "pipes": [Circular],
        "pipesCount": 4,
        "readableListening": false,
        "reading": false,
        "readingMore": false,
        "resumeScheduled": true,
        "sync": false,
      },
      "_transformState": Object {
        "afterTransform": [Function],
        "needTransform": false,
        "transforming": false,
        "writecb": null,
        "writechunk": null,
        "writeencoding": null,
      },
      "_writableState": WritableState {
        "bufferProcessing": false,
        "bufferedRequest": null,
        "bufferedRequestCount": 0,
        "corked": 0,
        "corkedRequestsFree": CorkedRequest {
          "entry": null,
          "finish": [Function],
          "next": null,
        },
        "decodeStrings": true,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": true,
        "ended": false,
        "ending": false,
        "errorEmitted": false,
        "finalCalled": false,
        "finished": false,
        "highWaterMark": 16,
        "lastBufferedRequest": null,
        "length": 0,
        "needDrain": false,
        "objectMode": true,
        "onwrite": [Function],
        "pendingcb": 0,
        "prefinished": false,
        "sync": true,
        "writecb": null,
        "writelen": 0,
        "writing": false,
      },
      "allowHalfOpen": true,
      "defaultMeta": Object {},
      "exceptions": ExceptionHandler {
        "handlers": Map {},
        "logger": [Circular],
      },
      "exitOnError": false,
      "format": Format {
        "options": Object {},
      },
      "level": "info",
      "levels": Object {
        "debug": 5,
        "error": 0,
        "http": 3,
        "info": 2,
        "silly": 6,
        "verbose": 4,
        "warn": 1,
      },
      "profilers": Object {},
      "readable": true,
      "rejections": RejectionHandler {
        "handlers": Map {},
        "logger": [Circular],
      },
      "silent": undefined,
      "writable": true,
    },
    "silent": undefined,
    "writable": true,
  },
  DailyRotateFile {
    "__winstonerror": [Function],
    "__winstonwarn": [Function],
    "_events": Object {
      "close": [Function],
      "drain": [Function],
      "error": Array [
        [Function],
        [Function],
      ],
      "finish": [Function],
      "unpipe": Array [
        [Function],
        [Function],
      ],
      "warn": [Function],
    },
    "_eventsCount": 6,
    "_maxListeners": undefined,
    "_writableState": WritableState {
      "bufferProcessing": false,
      "bufferedRequest": null,
      "bufferedRequestCount": 0,
      "corked": 0,
      "corkedRequestsFree": CorkedRequest {
        "entry": null,
        "finish": [Function],
        "next": null,
      },
      "decodeStrings": true,
      "defaultEncoding": "utf8",
      "destroyed": false,
      "ended": false,
      "ending": false,
      "errorEmitted": false,
      "finalCalled": false,
      "finished": false,
      "highWaterMark": 16,
      "lastBufferedRequest": null,
      "length": 0,
      "needDrain": false,
      "objectMode": true,
      "onwrite": [Function],
      "pendingcb": 0,
      "prefinished": false,
      "sync": true,
      "writecb": null,
      "writelen": 0,
      "writing": false,
    },
    "dirname": "logs",
    "filename": "%DATE%.debug.log",
    "format": Format {
      "Format": [Function],
      "options": Object {},
    },
    "handleExceptions": undefined,
    "level": "debug",
    "levels": Object {
      "debug": 5,
      "error": 0,
      "http": 3,
      "info": 2,
      "silly": 6,
      "verbose": 4,
      "warn": 1,
    },
    "logStream": EventEmitter {
      "_events": Object {
        "new": Array [
          [Function],
          [Function],
        ],
        "rotate": [Function],
      },
      "_eventsCount": 2,
      "_maxListeners": undefined,
      "auditLog": Object {
        "auditLog": "logs/.90e214d71b222aca4e71cf652f5d19a6033bddad-audit.json",
        "files": Array [
          Object {
            "date": 1565749507405,
            "hash": "c3ef651ca7c427b3dc3fd81c286c9638",
            "name": "logs/2019-08-13.debug.log",
          },
          Object {
            "date": 1565809830222,
            "hash": "0613edd96009107d2c33354bafa16e8b",
            "name": "logs/2019-08-14.debug.log",
          },
        ],
        "keep": Object {
          "amount": 2,
          "days": true,
        },
      },
      "end": [Function],
      "write": [Function],
    },
    "options": Object {
      "colorize": false,
      "datePattern": "YYYY-MM-DD",
      "depth": null,
      "eol": "
",
      "filename": "logs/%DATE%.debug.log",
      "format": Format {
        "Format": [Function],
        "options": Object {},
      },
      "json": false,
      "label": null,
      "level": "debug",
      "logstash": null,
      "maxFiles": "2d",
      "maxSize": "20m",
      "prettyPrint": false,
      "showLevel": true,
      "stringify": false,
      "timestamp": [Function],
    },
    "parent": DerivedLogger {
      "_events": Object {
        "data": Array [
          [Function],
          [Function],
          [Function],
          [Function],
        ],
        "end": Array [
          [Function],
          [Function],
          [Function],
          [Function],
        ],
        "prefinish": [Function],
      },
      "_eventsCount": 3,
      "_maxListeners": undefined,
      "_readableState": ReadableState {
        "awaitDrain": 0,
        "buffer": BufferList {
          "head": null,
          "length": 0,
          "tail": null,
        },
        "decoder": null,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": true,
        "emittedReadable": false,
        "encoding": null,
        "endEmitted": false,
        "ended": false,
        "flowing": true,
        "highWaterMark": 16,
        "length": 0,
        "needReadable": true,
        "objectMode": true,
        "paused": false,
        "pipes": [Circular],
        "pipesCount": 4,
        "readableListening": false,
        "reading": false,
        "readingMore": false,
        "resumeScheduled": true,
        "sync": false,
      },
      "_transformState": Object {
        "afterTransform": [Function],
        "needTransform": false,
        "transforming": false,
        "writecb": null,
        "writechunk": null,
        "writeencoding": null,
      },
      "_writableState": WritableState {
        "bufferProcessing": false,
        "bufferedRequest": null,
        "bufferedRequestCount": 0,
        "corked": 0,
        "corkedRequestsFree": CorkedRequest {
          "entry": null,
          "finish": [Function],
          "next": null,
        },
        "decodeStrings": true,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": true,
        "ended": false,
        "ending": false,
        "errorEmitted": false,
        "finalCalled": false,
        "finished": false,
        "highWaterMark": 16,
        "lastBufferedRequest": null,
        "length": 0,
        "needDrain": false,
        "objectMode": true,
        "onwrite": [Function],
        "pendingcb": 0,
        "prefinished": false,
        "sync": true,
        "writecb": null,
        "writelen": 0,
        "writing": false,
      },
      "allowHalfOpen": true,
      "defaultMeta": Object {},
      "exceptions": ExceptionHandler {
        "handlers": Map {},
        "logger": [Circular],
      },
      "exitOnError": false,
      "format": Format {
        "options": Object {},
      },
      "level": "info",
      "levels": Object {
        "debug": 5,
        "error": 0,
        "http": 3,
        "info": 2,
        "silly": 6,
        "verbose": 4,
        "warn": 1,
      },
      "profilers": Object {},
      "readable": true,
      "rejections": RejectionHandler {
        "handlers": Map {},
        "logger": [Circular],
      },
      "silent": undefined,
      "writable": true,
    },
    "silent": undefined,
    "writable": true,
  },
  DailyRotateFile {
    "__winstonerror": [Function],
    "__winstonwarn": [Function],
    "_events": Object {
      "close": [Function],
      "drain": [Function],
      "error": Array [
        [Function],
        [Function],
      ],
      "finish": [Function],
      "unpipe": Array [
        [Function],
        [Function],
      ],
      "warn": [Function],
    },
    "_eventsCount": 6,
    "_maxListeners": undefined,
    "_writableState": WritableState {
      "bufferProcessing": false,
      "bufferedRequest": null,
      "bufferedRequestCount": 0,
      "corked": 0,
      "corkedRequestsFree": CorkedRequest {
        "entry": null,
        "finish": [Function],
        "next": null,
      },
      "decodeStrings": true,
      "defaultEncoding": "utf8",
      "destroyed": false,
      "ended": false,
      "ending": false,
      "errorEmitted": false,
      "finalCalled": false,
      "finished": false,
      "highWaterMark": 16,
      "lastBufferedRequest": null,
      "length": 0,
      "needDrain": false,
      "objectMode": true,
      "onwrite": [Function],
      "pendingcb": 0,
      "prefinished": false,
      "sync": true,
      "writecb": null,
      "writelen": 0,
      "writing": false,
    },
    "dirname": "logs",
    "filename": "%DATE%.silly.log",
    "format": Format {
      "Format": [Function],
      "options": Object {},
    },
    "handleExceptions": undefined,
    "level": "silly",
    "levels": Object {
      "debug": 5,
      "error": 0,
      "http": 3,
      "info": 2,
      "silly": 6,
      "verbose": 4,
      "warn": 1,
    },
    "logStream": EventEmitter {
      "_events": Object {
        "new": Array [
          [Function],
          [Function],
        ],
        "rotate": [Function],
      },
      "_eventsCount": 2,
      "_maxListeners": undefined,
      "auditLog": Object {
        "auditLog": "logs/.973edb8125ed4fc2398326e9246b192e01b492dc-audit.json",
        "files": Array [
          Object {
            "date": 1565749507405,
            "hash": "5210ee84429ed3065370e080d1c5c9d5",
            "name": "logs/2019-08-13.silly.log",
          },
          Object {
            "date": 1565809830223,
            "hash": "1b86b467f9bbe9c968796f5bf11f45f3",
            "name": "logs/2019-08-14.silly.log",
          },
        ],
        "keep": Object {
          "amount": 2,
          "days": true,
        },
      },
      "end": [Function],
      "write": [Function],
    },
    "options": Object {
      "colorize": false,
      "datePattern": "YYYY-MM-DD",
      "depth": null,
      "eol": "
",
      "filename": "logs/%DATE%.silly.log",
      "format": Format {
        "Format": [Function],
        "options": Object {},
      },
      "json": false,
      "label": null,
      "level": "silly",
      "logstash": null,
      "maxFiles": "2d",
      "maxSize": "20m",
      "prettyPrint": false,
      "showLevel": true,
      "stringify": false,
      "timestamp": [Function],
    },
    "parent": DerivedLogger {
      "_events": Object {
        "data": Array [
          [Function],
          [Function],
          [Function],
          [Function],
        ],
        "end": Array [
          [Function],
          [Function],
          [Function],
          [Function],
        ],
        "prefinish": [Function],
      },
      "_eventsCount": 3,
      "_maxListeners": undefined,
      "_readableState": ReadableState {
        "awaitDrain": 0,
        "buffer": BufferList {
          "head": null,
          "length": 0,
          "tail": null,
        },
        "decoder": null,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": true,
        "emittedReadable": false,
        "encoding": null,
        "endEmitted": false,
        "ended": false,
        "flowing": true,
        "highWaterMark": 16,
        "length": 0,
        "needReadable": true,
        "objectMode": true,
        "paused": false,
        "pipes": [Circular],
        "pipesCount": 4,
        "readableListening": false,
        "reading": false,
        "readingMore": false,
        "resumeScheduled": true,
        "sync": false,
      },
      "_transformState": Object {
        "afterTransform": [Function],
        "needTransform": false,
        "transforming": false,
        "writecb": null,
        "writechunk": null,
        "writeencoding": null,
      },
      "_writableState": WritableState {
        "bufferProcessing": false,
        "bufferedRequest": null,
        "bufferedRequestCount": 0,
        "corked": 0,
        "corkedRequestsFree": CorkedRequest {
          "entry": null,
          "finish": [Function],
          "next": null,
        },
        "decodeStrings": true,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": true,
        "ended": false,
        "ending": false,
        "errorEmitted": false,
        "finalCalled": false,
        "finished": false,
        "highWaterMark": 16,
        "lastBufferedRequest": null,
        "length": 0,
        "needDrain": false,
        "objectMode": true,
        "onwrite": [Function],
        "pendingcb": 0,
        "prefinished": false,
        "sync": true,
        "writecb": null,
        "writelen": 0,
        "writing": false,
      },
      "allowHalfOpen": true,
      "defaultMeta": Object {},
      "exceptions": ExceptionHandler {
        "handlers": Map {},
        "logger": [Circular],
      },
      "exitOnError": false,
      "format": Format {
        "options": Object {},
      },
      "level": "info",
      "levels": Object {
        "debug": 5,
        "error": 0,
        "http": 3,
        "info": 2,
        "silly": 6,
        "verbose": 4,
        "warn": 1,
      },
      "profilers": Object {},
      "readable": true,
      "rejections": RejectionHandler {
        "handlers": Map {},
        "logger": [Circular],
      },
      "silent": undefined,
      "writable": true,
    },
    "silent": undefined,
    "writable": true,
  },
]
`;

exports[`logging createLogger snapshot 1`] = `
DerivedLogger {
  "_events": Object {
    "data": Array [
      [Function],
      [Function],
      [Function],
      [Function],
    ],
    "end": Array [
      [Function],
      [Function],
      [Function],
      [Function],
    ],
    "prefinish": [Function],
  },
  "_eventsCount": 3,
  "_maxListeners": undefined,
  "_readableState": ReadableState {
    "awaitDrain": 0,
    "buffer": BufferList {
      "head": null,
      "length": 0,
      "tail": null,
    },
    "decoder": null,
    "defaultEncoding": "utf8",
    "destroyed": false,
    "emitClose": true,
    "emittedReadable": false,
    "encoding": null,
    "endEmitted": false,
    "ended": false,
    "flowing": true,
    "highWaterMark": 16,
    "length": 0,
    "needReadable": true,
    "objectMode": true,
    "paused": false,
    "pipes": Array [
      Console {
        "__winstonerror": [Function],
        "__winstonwarn": [Function],
        "_events": Object {
          "close": [Function],
          "drain": [Function],
          "error": Array [
            [Function],
            [Function],
          ],
          "finish": [Function],
          "unpipe": Array [
            [Function],
            [Function],
          ],
          "warn": [Function],
        },
        "_eventsCount": 6,
        "_maxListeners": 30,
        "_writableState": WritableState {
          "bufferProcessing": false,
          "bufferedRequest": null,
          "bufferedRequestCount": 0,
          "corked": 0,
          "corkedRequestsFree": CorkedRequest {
            "entry": null,
            "finish": [Function],
            "next": null,
          },
          "decodeStrings": true,
          "defaultEncoding": "utf8",
          "destroyed": false,
          "ended": false,
          "ending": false,
          "errorEmitted": false,
          "finalCalled": false,
          "finished": false,
          "highWaterMark": 16,
          "lastBufferedRequest": null,
          "length": 0,
          "needDrain": false,
          "objectMode": true,
          "onwrite": [Function],
          "pendingcb": 0,
          "prefinished": false,
          "sync": true,
          "writecb": null,
          "writelen": 0,
          "writing": false,
        },
        "consoleWarnLevels": Object {},
        "eol": "
",
        "format": Format {
          "Format": [Function],
          "options": Object {},
        },
        "handleExceptions": undefined,
        "level": "info",
        "levels": Object {
          "debug": 5,
          "error": 0,
          "http": 3,
          "info": 2,
          "silly": 6,
          "verbose": 4,
          "warn": 1,
        },
        "name": "console",
        "parent": [Circular],
        "silent": undefined,
        "stderrLevels": Object {},
        "writable": true,
      },
      DailyRotateFile {
        "__winstonerror": [Function],
        "__winstonwarn": [Function],
        "_events": Object {
          "close": [Function],
          "drain": [Function],
          "error": Array [
            [Function],
            [Function],
          ],
          "finish": [Function],
          "unpipe": Array [
            [Function],
            [Function],
          ],
          "warn": [Function],
        },
        "_eventsCount": 6,
        "_maxListeners": undefined,
        "_writableState": WritableState {
          "bufferProcessing": false,
          "bufferedRequest": null,
          "bufferedRequestCount": 0,
          "corked": 0,
          "corkedRequestsFree": CorkedRequest {
            "entry": null,
            "finish": [Function],
            "next": null,
          },
          "decodeStrings": true,
          "defaultEncoding": "utf8",
          "destroyed": false,
          "ended": false,
          "ending": false,
          "errorEmitted": false,
          "finalCalled": false,
          "finished": false,
          "highWaterMark": 16,
          "lastBufferedRequest": null,
          "length": 0,
          "needDrain": false,
          "objectMode": true,
          "onwrite": [Function],
          "pendingcb": 0,
          "prefinished": false,
          "sync": true,
          "writecb": null,
          "writelen": 0,
          "writing": false,
        },
        "dirname": "logs",
        "filename": "%DATE%.info.log",
        "format": Format {
          "Format": [Function],
          "options": Object {},
        },
        "handleExceptions": undefined,
        "level": "info",
        "levels": Object {
          "debug": 5,
          "error": 0,
          "http": 3,
          "info": 2,
          "silly": 6,
          "verbose": 4,
          "warn": 1,
        },
        "logStream": EventEmitter {
          "_events": Object {
            "new": Array [
              [Function],
              [Function],
            ],
            "rotate": [Function],
          },
          "_eventsCount": 2,
          "_maxListeners": undefined,
          "auditLog": Object {
            "auditLog": "logs/.923c928cdb909ea68f7c250e96bd85f54351900c-audit.json",
            "files": Array [
              Object {
                "date": 1565749507403,
                "hash": "de31bfcafc775014ff6d1023e3477a3c",
                "name": "logs/2019-08-13.info.log",
              },
              Object {
                "date": 1565809830221,
                "hash": "96941aed76ac2a76276dc923ff4d04ed",
                "name": "logs/2019-08-14.info.log",
              },
            ],
            "keep": Object {
              "amount": 7,
              "days": true,
            },
          },
          "end": [Function],
          "write": [Function],
        },
        "options": Object {
          "colorize": false,
          "datePattern": "YYYY-MM-DD",
          "depth": null,
          "eol": "
",
          "filename": "logs/%DATE%.info.log",
          "format": Format {
            "Format": [Function],
            "options": Object {},
          },
          "json": false,
          "label": null,
          "level": "info",
          "logstash": null,
          "maxFiles": "7d",
          "maxSize": "20m",
          "prettyPrint": false,
          "showLevel": true,
          "stringify": false,
          "timestamp": [Function],
        },
        "parent": [Circular],
        "silent": undefined,
        "writable": true,
      },
      DailyRotateFile {
        "__winstonerror": [Function],
        "__winstonwarn": [Function],
        "_events": Object {
          "close": [Function],
          "drain": [Function],
          "error": Array [
            [Function],
            [Function],
          ],
          "finish": [Function],
          "unpipe": Array [
            [Function],
            [Function],
          ],
          "warn": [Function],
        },
        "_eventsCount": 6,
        "_maxListeners": undefined,
        "_writableState": WritableState {
          "bufferProcessing": false,
          "bufferedRequest": null,
          "bufferedRequestCount": 0,
          "corked": 0,
          "corkedRequestsFree": CorkedRequest {
            "entry": null,
            "finish": [Function],
            "next": null,
          },
          "decodeStrings": true,
          "defaultEncoding": "utf8",
          "destroyed": false,
          "ended": false,
          "ending": false,
          "errorEmitted": false,
          "finalCalled": false,
          "finished": false,
          "highWaterMark": 16,
          "lastBufferedRequest": null,
          "length": 0,
          "needDrain": false,
          "objectMode": true,
          "onwrite": [Function],
          "pendingcb": 0,
          "prefinished": false,
          "sync": true,
          "writecb": null,
          "writelen": 0,
          "writing": false,
        },
        "dirname": "logs",
        "filename": "%DATE%.debug.log",
        "format": Format {
          "Format": [Function],
          "options": Object {},
        },
        "handleExceptions": undefined,
        "level": "debug",
        "levels": Object {
          "debug": 5,
          "error": 0,
          "http": 3,
          "info": 2,
          "silly": 6,
          "verbose": 4,
          "warn": 1,
        },
        "logStream": EventEmitter {
          "_events": Object {
            "new": Array [
              [Function],
              [Function],
            ],
            "rotate": [Function],
          },
          "_eventsCount": 2,
          "_maxListeners": undefined,
          "auditLog": Object {
            "auditLog": "logs/.90e214d71b222aca4e71cf652f5d19a6033bddad-audit.json",
            "files": Array [
              Object {
                "date": 1565749507405,
                "hash": "c3ef651ca7c427b3dc3fd81c286c9638",
                "name": "logs/2019-08-13.debug.log",
              },
              Object {
                "date": 1565809830222,
                "hash": "0613edd96009107d2c33354bafa16e8b",
                "name": "logs/2019-08-14.debug.log",
              },
            ],
            "keep": Object {
              "amount": 2,
              "days": true,
            },
          },
          "end": [Function],
          "write": [Function],
        },
        "options": Object {
          "colorize": false,
          "datePattern": "YYYY-MM-DD",
          "depth": null,
          "eol": "
",
          "filename": "logs/%DATE%.debug.log",
          "format": Format {
            "Format": [Function],
            "options": Object {},
          },
          "json": false,
          "label": null,
          "level": "debug",
          "logstash": null,
          "maxFiles": "2d",
          "maxSize": "20m",
          "prettyPrint": false,
          "showLevel": true,
          "stringify": false,
          "timestamp": [Function],
        },
        "parent": [Circular],
        "silent": undefined,
        "writable": true,
      },
      DailyRotateFile {
        "__winstonerror": [Function],
        "__winstonwarn": [Function],
        "_events": Object {
          "close": [Function],
          "drain": [Function],
          "error": Array [
            [Function],
            [Function],
          ],
          "finish": [Function],
          "unpipe": Array [
            [Function],
            [Function],
          ],
          "warn": [Function],
        },
        "_eventsCount": 6,
        "_maxListeners": undefined,
        "_writableState": WritableState {
          "bufferProcessing": false,
          "bufferedRequest": null,
          "bufferedRequestCount": 0,
          "corked": 0,
          "corkedRequestsFree": CorkedRequest {
            "entry": null,
            "finish": [Function],
            "next": null,
          },
          "decodeStrings": true,
          "defaultEncoding": "utf8",
          "destroyed": false,
          "ended": false,
          "ending": false,
          "errorEmitted": false,
          "finalCalled": false,
          "finished": false,
          "highWaterMark": 16,
          "lastBufferedRequest": null,
          "length": 0,
          "needDrain": false,
          "objectMode": true,
          "onwrite": [Function],
          "pendingcb": 0,
          "prefinished": false,
          "sync": true,
          "writecb": null,
          "writelen": 0,
          "writing": false,
        },
        "dirname": "logs",
        "filename": "%DATE%.silly.log",
        "format": Format {
          "Format": [Function],
          "options": Object {},
        },
        "handleExceptions": undefined,
        "level": "silly",
        "levels": Object {
          "debug": 5,
          "error": 0,
          "http": 3,
          "info": 2,
          "silly": 6,
          "verbose": 4,
          "warn": 1,
        },
        "logStream": EventEmitter {
          "_events": Object {
            "new": Array [
              [Function],
              [Function],
            ],
            "rotate": [Function],
          },
          "_eventsCount": 2,
          "_maxListeners": undefined,
          "auditLog": Object {
            "auditLog": "logs/.973edb8125ed4fc2398326e9246b192e01b492dc-audit.json",
            "files": Array [
              Object {
                "date": 1565749507405,
                "hash": "5210ee84429ed3065370e080d1c5c9d5",
                "name": "logs/2019-08-13.silly.log",
              },
              Object {
                "date": 1565809830223,
                "hash": "1b86b467f9bbe9c968796f5bf11f45f3",
                "name": "logs/2019-08-14.silly.log",
              },
            ],
            "keep": Object {
              "amount": 2,
              "days": true,
            },
          },
          "end": [Function],
          "write": [Function],
        },
        "options": Object {
          "colorize": false,
          "datePattern": "YYYY-MM-DD",
          "depth": null,
          "eol": "
",
          "filename": "logs/%DATE%.silly.log",
          "format": Format {
            "Format": [Function],
            "options": Object {},
          },
          "json": false,
          "label": null,
          "level": "silly",
          "logstash": null,
          "maxFiles": "2d",
          "maxSize": "20m",
          "prettyPrint": false,
          "showLevel": true,
          "stringify": false,
          "timestamp": [Function],
        },
        "parent": [Circular],
        "silent": undefined,
        "writable": true,
      },
    ],
    "pipesCount": 4,
    "readableListening": false,
    "reading": false,
    "readingMore": false,
    "resumeScheduled": true,
    "sync": false,
  },
  "_transformState": Object {
    "afterTransform": [Function],
    "needTransform": false,
    "transforming": false,
    "writecb": null,
    "writechunk": null,
    "writeencoding": null,
  },
  "_writableState": WritableState {
    "bufferProcessing": false,
    "bufferedRequest": null,
    "bufferedRequestCount": 0,
    "corked": 0,
    "corkedRequestsFree": CorkedRequest {
      "entry": null,
      "finish": [Function],
      "next": null,
    },
    "decodeStrings": true,
    "defaultEncoding": "utf8",
    "destroyed": false,
    "emitClose": true,
    "ended": false,
    "ending": false,
    "errorEmitted": false,
    "finalCalled": false,
    "finished": false,
    "highWaterMark": 16,
    "lastBufferedRequest": null,
    "length": 0,
    "needDrain": false,
    "objectMode": true,
    "onwrite": [Function],
    "pendingcb": 0,
    "prefinished": false,
    "sync": true,
    "writecb": null,
    "writelen": 0,
    "writing": false,
  },
  "allowHalfOpen": true,
  "defaultMeta": Object {},
  "exceptions": ExceptionHandler {
    "handlers": Map {},
    "logger": [Circular],
  },
  "exitOnError": false,
  "format": Format {
    "options": Object {},
  },
  "level": "info",
  "levels": Object {
    "debug": 5,
    "error": 0,
    "http": 3,
    "info": 2,
    "silly": 6,
    "verbose": 4,
    "warn": 1,
  },
  "profilers": Object {},
  "readable": true,
  "rejections": RejectionHandler {
    "handlers": Map {},
    "logger": [Circular],
  },
  "silent": undefined,
  "writable": true,
}
`;

exports[`logging transports 1`] = `
Array [
  Console {
    "_events": Object {
      "pipe": [Function],
      "unpipe": [Function],
    },
    "_eventsCount": 2,
    "_maxListeners": 30,
    "_writableState": WritableState {
      "bufferProcessing": false,
      "bufferedRequest": null,
      "bufferedRequestCount": 0,
      "corked": 0,
      "corkedRequestsFree": CorkedRequest {
        "entry": null,
        "finish": [Function],
        "next": null,
      },
      "decodeStrings": true,
      "defaultEncoding": "utf8",
      "destroyed": false,
      "ended": false,
      "ending": false,
      "errorEmitted": false,
      "finalCalled": false,
      "finished": false,
      "highWaterMark": 16,
      "lastBufferedRequest": null,
      "length": 0,
      "needDrain": false,
      "objectMode": true,
      "onwrite": [Function],
      "pendingcb": 0,
      "prefinished": false,
      "sync": true,
      "writecb": null,
      "writelen": 0,
      "writing": false,
    },
    "consoleWarnLevels": Object {},
    "eol": "
",
    "format": Format {
      "Format": [Function],
      "options": Object {},
    },
    "handleExceptions": undefined,
    "level": "info",
    "name": "console",
    "silent": undefined,
    "stderrLevels": Object {},
    "writable": true,
  },
  DailyRotateFile {
    "_events": Object {
      "pipe": [Function],
      "unpipe": [Function],
    },
    "_eventsCount": 2,
    "_maxListeners": undefined,
    "_writableState": WritableState {
      "bufferProcessing": false,
      "bufferedRequest": null,
      "bufferedRequestCount": 0,
      "corked": 0,
      "corkedRequestsFree": CorkedRequest {
        "entry": null,
        "finish": [Function],
        "next": null,
      },
      "decodeStrings": true,
      "defaultEncoding": "utf8",
      "destroyed": false,
      "ended": false,
      "ending": false,
      "errorEmitted": false,
      "finalCalled": false,
      "finished": false,
      "highWaterMark": 16,
      "lastBufferedRequest": null,
      "length": 0,
      "needDrain": false,
      "objectMode": true,
      "onwrite": [Function],
      "pendingcb": 0,
      "prefinished": false,
      "sync": true,
      "writecb": null,
      "writelen": 0,
      "writing": false,
    },
    "dirname": "logs",
    "filename": "%DATE%.info.log",
    "format": Format {
      "Format": [Function],
      "options": Object {},
    },
    "handleExceptions": undefined,
    "level": "info",
    "logStream": EventEmitter {
      "_events": Object {
        "new": Array [
          [Function],
          [Function],
        ],
        "rotate": [Function],
      },
      "_eventsCount": 2,
      "_maxListeners": undefined,
      "auditLog": Object {
        "auditLog": "logs/.923c928cdb909ea68f7c250e96bd85f54351900c-audit.json",
        "files": Array [
          Object {
            "date": 1565749507403,
            "hash": "de31bfcafc775014ff6d1023e3477a3c",
            "name": "logs/2019-08-13.info.log",
          },
          Object {
            "date": 1565809830221,
            "hash": "96941aed76ac2a76276dc923ff4d04ed",
            "name": "logs/2019-08-14.info.log",
          },
        ],
        "keep": Object {
          "amount": 7,
          "days": true,
        },
      },
      "end": [Function],
      "write": [Function],
    },
    "options": Object {
      "colorize": false,
      "datePattern": "YYYY-MM-DD",
      "depth": null,
      "eol": "
",
      "filename": "logs/%DATE%.info.log",
      "format": Format {
        "Format": [Function],
        "options": Object {},
      },
      "json": false,
      "label": null,
      "level": "info",
      "logstash": null,
      "maxFiles": "7d",
      "maxSize": "20m",
      "prettyPrint": false,
      "showLevel": true,
      "stringify": false,
      "timestamp": [Function],
    },
    "silent": undefined,
    "writable": true,
  },
  DailyRotateFile {
    "_events": Object {
      "pipe": [Function],
      "unpipe": [Function],
    },
    "_eventsCount": 2,
    "_maxListeners": undefined,
    "_writableState": WritableState {
      "bufferProcessing": false,
      "bufferedRequest": null,
      "bufferedRequestCount": 0,
      "corked": 0,
      "corkedRequestsFree": CorkedRequest {
        "entry": null,
        "finish": [Function],
        "next": null,
      },
      "decodeStrings": true,
      "defaultEncoding": "utf8",
      "destroyed": false,
      "ended": false,
      "ending": false,
      "errorEmitted": false,
      "finalCalled": false,
      "finished": false,
      "highWaterMark": 16,
      "lastBufferedRequest": null,
      "length": 0,
      "needDrain": false,
      "objectMode": true,
      "onwrite": [Function],
      "pendingcb": 0,
      "prefinished": false,
      "sync": true,
      "writecb": null,
      "writelen": 0,
      "writing": false,
    },
    "dirname": "logs",
    "filename": "%DATE%.debug.log",
    "format": Format {
      "Format": [Function],
      "options": Object {},
    },
    "handleExceptions": undefined,
    "level": "debug",
    "logStream": EventEmitter {
      "_events": Object {
        "new": Array [
          [Function],
          [Function],
        ],
        "rotate": [Function],
      },
      "_eventsCount": 2,
      "_maxListeners": undefined,
      "auditLog": Object {
        "auditLog": "logs/.90e214d71b222aca4e71cf652f5d19a6033bddad-audit.json",
        "files": Array [
          Object {
            "date": 1565749507405,
            "hash": "c3ef651ca7c427b3dc3fd81c286c9638",
            "name": "logs/2019-08-13.debug.log",
          },
          Object {
            "date": 1565809830222,
            "hash": "0613edd96009107d2c33354bafa16e8b",
            "name": "logs/2019-08-14.debug.log",
          },
        ],
        "keep": Object {
          "amount": 2,
          "days": true,
        },
      },
      "end": [Function],
      "write": [Function],
    },
    "options": Object {
      "colorize": false,
      "datePattern": "YYYY-MM-DD",
      "depth": null,
      "eol": "
",
      "filename": "logs/%DATE%.debug.log",
      "format": Format {
        "Format": [Function],
        "options": Object {},
      },
      "json": false,
      "label": null,
      "level": "debug",
      "logstash": null,
      "maxFiles": "2d",
      "maxSize": "20m",
      "prettyPrint": false,
      "showLevel": true,
      "stringify": false,
      "timestamp": [Function],
    },
    "silent": undefined,
    "writable": true,
  },
  DailyRotateFile {
    "_events": Object {
      "pipe": [Function],
      "unpipe": [Function],
    },
    "_eventsCount": 2,
    "_maxListeners": undefined,
    "_writableState": WritableState {
      "bufferProcessing": false,
      "bufferedRequest": null,
      "bufferedRequestCount": 0,
      "corked": 0,
      "corkedRequestsFree": CorkedRequest {
        "entry": null,
        "finish": [Function],
        "next": null,
      },
      "decodeStrings": true,
      "defaultEncoding": "utf8",
      "destroyed": false,
      "ended": false,
      "ending": false,
      "errorEmitted": false,
      "finalCalled": false,
      "finished": false,
      "highWaterMark": 16,
      "lastBufferedRequest": null,
      "length": 0,
      "needDrain": false,
      "objectMode": true,
      "onwrite": [Function],
      "pendingcb": 0,
      "prefinished": false,
      "sync": true,
      "writecb": null,
      "writelen": 0,
      "writing": false,
    },
    "dirname": "logs",
    "filename": "%DATE%.silly.log",
    "format": Format {
      "Format": [Function],
      "options": Object {},
    },
    "handleExceptions": undefined,
    "level": "silly",
    "logStream": EventEmitter {
      "_events": Object {
        "new": Array [
          [Function],
          [Function],
        ],
        "rotate": [Function],
      },
      "_eventsCount": 2,
      "_maxListeners": undefined,
      "auditLog": Object {
        "auditLog": "logs/.973edb8125ed4fc2398326e9246b192e01b492dc-audit.json",
        "files": Array [
          Object {
            "date": 1565749507405,
            "hash": "5210ee84429ed3065370e080d1c5c9d5",
            "name": "logs/2019-08-13.silly.log",
          },
          Object {
            "date": 1565809830223,
            "hash": "1b86b467f9bbe9c968796f5bf11f45f3",
            "name": "logs/2019-08-14.silly.log",
          },
        ],
        "keep": Object {
          "amount": 2,
          "days": true,
        },
      },
      "end": [Function],
      "write": [Function],
    },
    "options": Object {
      "colorize": false,
      "datePattern": "YYYY-MM-DD",
      "depth": null,
      "eol": "
",
      "filename": "logs/%DATE%.silly.log",
      "format": Format {
        "Format": [Function],
        "options": Object {},
      },
      "json": false,
      "label": null,
      "level": "silly",
      "logstash": null,
      "maxFiles": "2d",
      "maxSize": "20m",
      "prettyPrint": false,
      "showLevel": true,
      "stringify": false,
      "timestamp": [Function],
    },
    "silent": undefined,
    "writable": true,
  },
]
`;
